--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,6 @@
             "email": "hm@cct-marketing.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "minimum-stability":"stable"
 }
