--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,6 @@
         }
     ],
     "require": {},
-    "minimum-stability":"stable"
+    "minimum-stability":"stable",
+    "version":"1.0.0"
 }
